--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meus objetivos do ano</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <div class="conteudo">
         <div class="botoes">
-            <button class="botao">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
+          <button class="botao ativo">Meta ENEM</button>
+          <button class="botao">Faculdade</button>
+          <button class="botao">Celular</button>
+          <button class="botao">Meta Vestibular</button>
         </div>
-    </section>
+        <div class="abas-textos">
+          <div class="aba-conteudo ativo">
+              <h3 class="aba-conteudo-titulo-principal">Fazer mais de 3 redações por semana</h3>
+              <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+              <div class="contador"></div>
+          </div>
+      <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Passar no vestibular</h3>
+        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        <div class="contador"></div>
+    </div>
+    <div class="aba-conteudo">
+      <h3 class="aba-conteudo-titulo-principal">Trocar de celular</h3>
+      <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+      <div class="contador"></div>
+  </div>
+  <div class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal">Ter uma rotina de estudos</h3>
+    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+    <div class="contador"></div>
+</div>
+</div>
+</div>
+      
+      </section>
+      <script src="main.js">
+        
+      </script>
 </body>
 </html>
