--- a/index.html
+++ b/index.html
@@ -11,31 +11,99 @@
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-          <button class="botao ativo">Meta ENEM</button>
-          <button class="botao">Faculdade</button>
-          <button class="botao">Celular</button>
-          <button class="botao">Meta Vestibular</button>
+          <button class="botao ativo">Formatura</button>
+          <button class="botao">Trocar de celular</button>
+          <button class="botao">Fazer a CNH</button>
+          <button class="botao">Viagem de Formatura</button>
         </div>
         <div class="abas-textos">
           <div class="aba-conteudo ativo">
-              <h3 class="aba-conteudo-titulo-principal">Fazer mais de 3 redações por semana</h3>
+              <h3 class="aba-conteudo-titulo-principal"></h3>
               <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-              <div class="contador"></div>
+              <div class="contador">
+                <div class="contador-digito">
+                  <p class="contador-digito-numero" id="dias0">7</p>
+                  <p class="contador-digito-texto">dias</p>
+                </div>
+                <div class="contador-digito">
+                  <p class="contador-digito-numero" id="horas0">7</p>
+                  <p class="contador-digito-texto">horas</p>
+                </div>
+                <div class="contador-digito">
+                  <p class="contador-digito-numero" id="min0">7</p>
+                  <p class="contador-digito-texto">min</p>
+                </div>
+                <div class="contador-digito">
+                  <p class="contador-digito-numero" id="seg0">7</p>
+                  <p class="contador-digito-texto">seg</p>
+                </div>
+              </div>
           </div>
       <div class="aba-conteudo">
-        <h3 class="aba-conteudo-titulo-principal">Passar no vestibular</h3>
+        <h3 class="aba-conteudo-titulo-principal"></h3>
         <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-        <div class="contador"></div>
+        <div class="contador">
+          <div class="contador-digito">
+            <p class="contador-digito-numero" id="dias1">7</p>
+            <p class="contador-digito-texto">dias</p>
+          </div>
+          <div class="contador-digito">
+            <p class="contador-digito-numero" id="horas1">7</p>
+            <p class="contador-digito-texto">horas</p>
+          </div>
+          <div class="contador-digito">
+            <p class="contador-digito-numero" id="min1">7</p>
+            <p class="contador-digito-texto">min</p>
+          </div>
+          <div class="contador-digito">
+            <p class="contador-digito-numero" id="seg1">7</p>
+            <p class="contador-digito-texto">seg</p>
+          </div>
+        </div>
     </div>
     <div class="aba-conteudo">
-      <h3 class="aba-conteudo-titulo-principal">Trocar de celular</h3>
+      <h3 class="aba-conteudo-titulo-principal"></h3>
       <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-      <div class="contador"></div>
+      <div class="contador">
+        <div class="contador-digito">
+          <p class="contador-digito-numero" id="dias2">7</p>
+          <p class="contador-digito-texto">dias</p>
+        </div>
+        <div class="contador-digito">
+          <p class="contador-digito-numero" id="horas2">7</p>
+          <p class="contador-digito-texto">horas</p>
+        </div>
+        <div class="contador-digito">
+          <p class="contador-digito-numero" id="min2">7</p>
+          <p class="contador-digito-texto">min</p>
+        </div>
+        <div class="contador-digito">
+          <p class="contador-digito-numero" id="seg2">7</p>
+          <p class="contador-digito-texto">seg</p>
+        </div>
+      </div>
   </div>
   <div class="aba-conteudo">
-    <h3 class="aba-conteudo-titulo-principal">Ter uma rotina de estudos</h3>
+    <h3 class="aba-conteudo-titulo-principal"></h3>
     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-    <div class="contador"></div>
+    <div class="contador">
+      <div class="contador-digito">
+        <p class="contador-digito-numero" id="dias3">7</p>
+        <p class="contador-digito-texto">dias</p>
+      </div>
+      <div class="contador-digito">
+        <p class="contador-digito-numero" id="horas3">7</p>
+        <p class="contador-digito-texto">horas</p>
+      </div>
+      <div class="contador-digito">
+        <p class="contador-digito-numero" id="min3">7</p>
+        <p class="contador-digito-texto">min</p>
+      </div>
+      <div class="contador-digito">
+        <p class="contador-digito-numero" id="seg3">7</p>
+        <p class="contador-digito-texto">seg</p>
+      </div>
+    </div>
 </div>
 </div>
 </div>
